Crushed all LINT problems
